API 태깅 및 예시 추가

--- a/api/paths/v1/auth/register.yaml
+++ b/api/paths/v1/auth/register.yaml
@@ -1,6 +1,7 @@
 post:
   summary: 이메일로 회원가입
   description: 전송받은 이메일 링크로 회원가입 요청
+  tags: [ Auth ]
   requestBody:
     content:
       application/json:
