--- a/api/paths/v1/post/post.yaml
+++ b/api/paths/v1/post/post.yaml
@@ -1,6 +1,7 @@
 get:
   summary: 글 읽기
   description: 스터디 글 하나 읽기
+  tags: [ Post ]
   parameters:
     - in: path
       name: id
@@ -20,12 +21,69 @@ get:
               title:
                 type: string
                 description: 제목
+                example: 개쩌는 스터디 정리글
               subtitle:
                 type: string
                 description: 부제
+                example: 안보고는 못 배긴다
               content:
                 type: string
                 description: 내용
+                example: |
+                  # 제목 1
+                  ## 제목 2
+                  ### 제목 3
+                  #### 제목 4
+                  ##### 제목 5
+                  ###### 제목 6
+
+                  *기운 글자*
+
+                  **볼드**
+
+
+                  - 목록
+
+                  ```js
+                  const a = 1;
+                  const b = 2;
+                  ```
+
+                  ```python
+                  print("안녕하세요.\n만나서\t\t반갑습니다.")
+                  ```
+
+                  ```java
+                  public class Main {
+                      public static void main(String[] args) {
+                         System. out.println("Hello World" );
+                      }
+                  }
+                  ```
+
+                   # heading 1
+                    ## heading 2
+                    ### heading 3
+                    ~~strikethrough~~  
+
+                    > Blockquote  
+
+                    **strong**  
+                    *italics*  
+                    ***
+                    [Gmail](https://gmail.com)  
+                    ***
+                    1. ordered list
+                    2. ordered list
+                    - unordered list
+                    - unordered list  
+
+                    | Syntax      | Description |
+                    | ----------- | ----------- |
+                    | Header      | Title       |
+                    | Paragraph   | Text        |
+
+                  ![ex_screenshot](https://blog.kakaocdn.net/dn/0mySg/btqCUccOGVk/nQ68nZiNKoIEGNJkooELF1/img.jpg)
               date:
                 type: string
                 format: date
@@ -42,9 +100,11 @@ get:
                     name:
                       type: string
                       description: 작성자명
+                      example: 고대은
               thumbnailImageUrl:
                 type: string
                 description: 대표 이미지 URL
+                example: https://avatars.githubusercontent.com/u/27201209?v=4
               study:
                 type: object
                 description: 스터디 정보
@@ -55,12 +115,15 @@ get:
                   name:
                     type: string
                     description: 스터디 이름
+                    example: 알고리즘 스터디
                   profile_image_url:
                     type: string
                     description: 스터디 프로필 이미지 URL
+                    example: https://blog.kakaocdn.net/dn/vSeMf/btrwTcbbA4G/iVSYFyV5xoWpEtmW4kjiU1/img.png
                   description:
                     type: string
                     description: 스터디 소개글
+                    example: 안녕하세요
               _links:
                 type: object
                 description: 이전, 다음 글 링크
@@ -71,11 +134,15 @@ get:
                     properties:
                       href:
                         type: string
+                        format: uri
                         description: 다음 글 링크
+                        example: /api/v1/posts/3
                   prev:
                     type: object
                     description: 이전 글
                     properties:
                       href:
                         type: string
+                        format: uri
                         description: 이전 글 링크
+                        example: /api/v1/posts/1
