--- a/api/paths/v1/auth/login.yaml
+++ b/api/paths/v1/auth/login.yaml
@@ -1,6 +1,7 @@
 post:
   summary: 이메일로 로그인
   description: 전송받은 이메일 링크로 로그인 요청
+  tags: [ Auth ]
   requestBody:
     content:
       application/json:
