--- a/api/paths/v1/auth/signup.yaml
+++ b/api/paths/v1/auth/signup.yaml
@@ -1,6 +1,6 @@
 post:
-  summary: 이메일로 로그인
-  description: 전송받은 이메일 링크로 로그인 요청
+  summary: 인증 링크로 회원가입
+  description: 전송받은 이메일 링크를 통해 회원가입 요청
   tags: [ Auth ]
   requestBody:
     content:
@@ -12,7 +12,7 @@ post:
               type: string
   responses:
     '200':
-      description: 로그인 성공 및 인증 토큰 발행
+      description: 회원가입 성공 및 인증 및 인가 토큰 발행
       content:
         application/json:
           schema:
@@ -24,7 +24,3 @@ post:
                 type: string
     '401':
       description: 토큰 인증 실패
-    '400':
-      description: 유효하지 않은 요청 - 요청 바디에 필요한 값이 없음
-    '415':
-      description: Content-Type 헤더가 application/json이 아님
