--- a/api/paths/v1/search/post.yaml
+++ b/api/paths/v1/search/post.yaml
@@ -1,52 +1,14 @@
-post:
-  summary: 스터디 글 작성
-  description: 스터디 글 작성
-  tags: [ Post ]
+get:
+  summary: 스터디 글 검색
+  description: 스터디 글 검색
+  tags: [ Search ]
   parameters:
-    - in: header
-      name: Authorization
+    - in: query
+      name: query
       schema:
         type: string
-      description: Bearer 인증 토큰 (access-token)
       required: true
-  requestBody:
-    content:
-      application/json:
-        schema:
-          type: object
-          properties:
-            studyId:
-              type: number
-              description: 스터디 식별자
-            thumbnailUrl:
-              type: string
-              description: 썸네일 이미지 URL
-            title:
-              type: string
-              description: 제목
-            subtitle:
-              type: string
-              description: 부제
-            content:
-              type: string
-              description: 내용
-            tags:
-              type: array
-              description: 태그명 리스트
-              items:
-                type: string
-  responses:
-    '200':
-      description: 스터디 글 작성 성공
-    '401':
-      description: 로그인 필요 - 인증
-    '403':
-      description: 스터디 글 작성 권한 없음 - 인가
-get:
-  summary: 스터디 글 목록 조회
-  description: 스터디 글 목록 조회, 무한 스크롤
-  tags: [ Post ]
-  parameters:
+      description: 검색어
     - in: query
       name: cursor
       schema:
@@ -59,14 +21,6 @@ get:
         type: number
       required: true
       description: 청크 단위
-    - in: query
-      name: sort
-      schema:
-        type: string
-        enum: [ recent ]
-        default: recent
-      required: true
-      description: 정렬 방법
   responses:
     '200':
       description: 성공
@@ -93,6 +47,9 @@ get:
                     subtitle:
                       type: string
                       description: 부제
+                    summary:
+                      type: string
+                      description: 스터디 글 내용 요약
                     createdAt:
                       type: string
                       description: 스터디 글 생성일
@@ -118,3 +75,5 @@ get:
                   nextCursor:
                     type: number
                     description: 다음 스터디 글 커서
+    '400':
+      description: 공백으로 검색 시 실패
