--- a/api/root.yaml
+++ b/api/root.yaml
@@ -6,16 +6,22 @@ info:
 servers:
   - url: "https://localhost:8080"
 paths:
-  /api/v1/auth/mail/send:
-    $ref: "./paths/v1/auth/send-mail.yaml"
-  /api/v1/auth/mail/register:
-    $ref: "./paths/v1/auth/register.yaml"
-  /api/v1/auth/mail/login:
-    $ref: "./paths/v1/auth/login.yaml"
+  /api/v1/auth/email/send:
+    $ref: "./paths/v1/auth/send-email.yaml"
+  /api/v1/auth/email/signup:
+    $ref: "./paths/v1/auth/signup.yaml"
+  /api/v1/auth/email/signin:
+    $ref: "./paths/v1/auth/signin.yaml"
   /api/v1/posts:
     $ref: "./paths/v1/post/posts.yaml"
   /api/v1/posts/{id}:
     $ref: "./paths/v1/post/post.yaml"
+  /api/v1/search/post:
+    $ref: "./paths/v1/search/post.yaml"
+  /api/v1/search/study:
+    $ref: "./paths/v1/search/study.yaml"
+
+# 변경 안됨
   /api/v1/studies:
     $ref: "./paths/v1/study/studies.yaml"
   /api/v1/studies/{id}:
