--- a/api/paths/v1/study/posts.yaml
+++ b/api/paths/v1/study/posts.yaml
@@ -62,3 +62,50 @@ get:
                   nextCursor:
                     type: number
                     description: 무한스크롤 다음 커서
+post:
+  summary: 스터디 글 작성
+  description: 스터디 글 작성
+  tags: [ Post ]
+  parameters:
+    - in: header
+      name: Authorization
+      schema:
+        type: string
+      description: Bearer 인증 토큰 (access-token)
+      required: true
+    - in: path
+      name: studyId
+      schema:
+        type: number
+        description: 스터디 식별자
+        required: true
+  requestBody:
+    content:
+      multipart/form-data:
+        schema:
+          type: object
+          properties:
+            thumbnail:
+              type: binary
+              description: 썸네일 이미지
+            title:
+              type: string
+              description: 제목
+            subtitle:
+              type: string
+              description: 부제
+            content:
+              type: string
+              description: 내용
+  #            tags:
+  #              type: array
+  #              description: 태그명 리스트
+  #              items:
+  #                type: string
+  responses:
+    '200':
+      description: 스터디 글 작성 성공
+    '401':
+      description: 로그인 필요 - 인증
+    '403':
+      description: 스터디 글 작성 권한 없음 - 인가
