--- a/api/root.yaml
+++ b/api/root.yaml
@@ -22,8 +22,6 @@ paths:
     $ref: "./paths/v1/post/like.yaml"
   /api/v1/posts/{id}/unlike:
     $ref: "./paths/v1/post/unlike.yaml"
-  /api/v1/{uid}/posts:
-    $ref: "./paths/v1/post/my.yaml"
   /api/v1/{uid}/liked:
     $ref: "./paths/v1/post/liked.yaml"
   # search
@@ -31,24 +29,45 @@ paths:
     $ref: "./paths/v1/search/post.yaml"
   /api/v1/search/study:
     $ref: "./paths/v1/search/study.yaml"
+  /api/v1/search/member:
+    $ref: "./paths/v1/search/member.yaml"
   # member
   /api/v1/members:
     $ref: "./paths/v1/member/member.yaml"
   # study
-  /api/v1/studies/images:
-    $ref: "./paths/v1/study/images.yaml"
   /api/v1/studies:
     $ref: "./paths/v1/study/studies.yaml"
   /api/v1/studies/{id}:
     $ref: "./paths/v1/study/study.yaml"
   /api/v1/studies/{id}/posts:
     $ref: "./paths/v1/study/posts.yaml"
+  /api/v1/studies/{studyId}/posts/{postId}:
+    $ref: "./paths/v1/study/post.yaml"
+  /api/v1/studies/{studyId}/posts/{postId}/edit-request:
+    $ref: "./paths/v1/study/edit-request.yaml"
   /api/v1/{uid}/studies:
     $ref: "./paths/v1/study/my.yaml"
+  # 한 번에 전부 초대하기 vs 한 명씩 초대하기
   /api/v1/studies/{id}/invite:
     $ref: "./paths/v1/study/invite.yaml"
-#  /api/v1/studies/{id}/invite/{uid}:
-#    $ref: "./paths/v1/study/invite.yaml"
+  /api/v1/studies/{id}/join:
+    $ref: "./paths/v1/study/join.yaml"
+  /api/v1/studies/{id}/invite/cancel:
+    $ref: "./paths/v1/study/invite-cancel.yaml"
+  /api/v1/studies/{id}/expel:
+    $ref: "./paths/v1/study/expel.yaml"
+  /api/v1/study/{id}/delegate:
+    $ref: "./paths/v1/study/delegate.yaml"
+  /api/v1/study/{id}/state:
+    $ref: "./paths/v1/study/state.yaml"
+  # copy
+  /api/v1/{uid}/copies:
+    $ref: "./paths/v1/copy/copies.yaml"
+  /api/v1/copies/{id}:
+    $ref: "./paths/v1/copy/copy.yaml"
+
+#  /api/v1/studies/{id}/members:
+#    $ref: "./paths/v1/study/"
   # comment
   /api/v1/posts/{id}/comments:
     $ref: "./paths/v1/comment/comments.yaml"
