--- a/api/paths/v1/study/post.yaml
+++ b/api/paths/v1/study/post.yaml
@@ -23,13 +23,13 @@ put:
         required: true
   requestBody:
     content:
-      application/json:
+      multipart/form-data:
         schema:
           type: object
           properties:
-            thumbnailUrl:
-              type: string
-              description: 썸네일 이미지 URL
+            thumbnail:
+              type: binary
+              description: 썸네일 이미지
             title:
               type: string
               description: 제목
@@ -47,6 +47,36 @@ put:
   responses:
     '200':
       description: 스터디 글 작성 성공
+    '401':
+      description: 로그인 필요 - 인증
+    '403':
+      description: 스터디 글 작성 권한 없음 - 인가
+delete:
+  summary: 스터디 글 삭제
+  description: 스터디 글 삭제 - 스터디 장 권한
+  tags: [ Post ]
+  parameters:
+    - in: header
+      name: Authorization
+      schema:
+        type: string
+      description: Bearer 인증 토큰 (access-token)
+      required: true
+    - in: path
+      name: studyId
+      schema:
+        type: number
+        description: 스터디 식별자
+        required: true
+    - in: path
+      name: postId
+      schema:
+        type: number
+        description: 스터디 글 식별자
+        required: true
+  responses:
+    '204':
+      description: 스터디 글 삭제 성공
     '401':
       description: 로그인 필요 - 인증
     '403':
