--- a/api/paths/v1/auth/signup.yaml
+++ b/api/paths/v1/auth/signup.yaml
@@ -10,6 +10,9 @@ post:
           properties:
             token:
               type: string
+            nickname:
+              type: string
+              description: 닉네임
   responses:
     '200':
       description: 회원가입 성공 및 인증 및 인가 토큰 발행
