OpenAPI Spec 병합 후 배포 테스트

--- a/api/root.yaml
+++ b/api/root.yaml
@@ -83,6 +83,6 @@ paths:
   /api/v1/comments/{id}/replies:
     $ref: "./paths/v1/reply/replies.yaml"
   # notice
-  /api/v1/notices:
+  /api/v1/noticesss:
     $ref: "./paths/v1/notice/notices.yaml"
 
